Add -Pages for POM -Runner classes -Pom.xml dependencies